--- a/index.html
+++ b/index.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Manager</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- HTML Meta Tags -->
+    <title>সেশনাল রিলেটেড ফাইল</title>
+    <meta name="description" content="Sessional Related file and many more! 
+Life sucks bro!  ">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Sayed">
+    <meta itemprop="description" content="Sessional Related file and many more! 
+Life sucks bro!  ">
+    <meta itemprop="image" content="http://raw.githubusercontent.com/abusayed0206/abusayed0206/main/OG_SAYED.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://sayed.page">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sayed">
+    <meta property="og:description" content="Sessional Related file and many more! 
+Life sucks bro!  ">
+    <meta property="og:image" content="http://raw.githubusercontent.com/abusayed0206/abusayed0206/main/OG_SAYED.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sayed">
+    <meta name="twitter:description" content="Sessional Related file and many more! 
+Life sucks bro!  ">
+    <meta name="twitter:image" content="http://raw.githubusercontent.com/abusayed0206/abusayed0206/main/OG_SAYED.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap">
+
 </head>
+
 <body>
     <div class="file-manager">
-        <h1>File Manager</h1>
-        <ul id="file-list"></ul>
+        <h1>সেশনাল রিলেটেড ফাইল<a href="https://github.com/abusayed0206/cuet-ce-sessional-materials" target="_blank">
+                <i class="fab fa-github"></i></a></h1>
+        <table id="file-list">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>নাম</th>
+                    <th>আকার</th>
+                    <th>ডাউনলোড</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
+
+    <div class="password-section">
+        <p>নোটঃ সব ফাইল খোলার জন্য পাসওয়ার্ড হচ্ছে <b>1901049</b>(আমার চুয়েট আইডি)</p>
+        <button class="password-button" onclick="copyToClipboard('1901049')">এখানে ক্লিক করে কপি কর</button>
+    </div>
+
+
+    <div class="github-link">
+        <a href="https://sayed.page" target="_blank">
+            <i class="fa-solid fa-earth-asia"></i>SAYED
+        </a>
+    </div>
+
     <script src="script.js"></script>
+
 </body>
+
 </html>
