--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Life sucks bro!  ">
                     <th>ডাউনলোড</th>
                 </tr>
                 <tr>
-                    <p>নোটঃ সব ফাইল খোলার জন্য পাসওয়ার্ড হচ্ছে <b>1901049</b>(আমার চুয়েট আইডি)</p>
+                    <p>নোটঃ যদি কোথাও পাসওয়ার্ড লাগে পাসওয়ার্ড হবে <b>1901049</b>(আমার চুয়েট আইডি)</p>
                     <button class="password-button" onclick="copyToClipboard('1901049')">এখানে ক্লিক করে কপি কর</button>
                 </tr>
             </thead>
